force-app/main/default/objects/Phone__c/Phone__c.object-meta.xml
<CustomObject>
    <label>Phone</label>
    <nameField>
        <displayFormat>Ph-{000000}</displayFormat>
        <label>Phone Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>