force-app/main/default/objects/Phone__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>