force-app/main/default/objects/Phone__c/fields/SLX_Id__c.field-meta.xml
<CustomField>
    <fullName>SLX_Id__c</fullName>
    <externalId>true</externalId>
    <label>SLX Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>