force-app/main/default/objects/Phone__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B | Business</fullName>
            </value>
            <value>
                <fullName>F | Fax</fullName>
            </value>
            <value>
                <fullName>H | Home</fullName>
            </value>
            <value>
                <fullName>M | Mobile</fullName>
            </value>
            <value>
                <fullName>O | Other</fullName>
                <default>true</default>
                <label>O | Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>